# user_service

./: .gitignore  alembic.ini  pyproject.toml  ruff.toml  user.db
alembic/: env.py
alembic/versions/: 7998bdb1d3a9_initial_db.py  eac490e9a318_.py
src/: config.py  database.py  main.py  middleware.py
src/users/: __init__.py  models.py  router.py  schemas.py  service.py
